--- a/MovieApp/MovieApp/Resources/tr.lproj/Localizable.strings
+++ b/MovieApp/MovieApp/Resources/tr.lproj/Localizable.strings
@@ -11,3 +11,5 @@ AppName = "FilmKu";
 TabBar.home = "Film Listesi";
 TabBar.discover = "Keşfet";
 TabBar.bookmark = "Kaydedilenler";
+
+Home.firstTitle = "Şimdi Gösterilenler";
