Add tableview and tablevie cell to homecontroller

--- a/MovieApp/MovieApp/Resources/en.lproj/Localizable.strings
+++ b/MovieApp/MovieApp/Resources/en.lproj/Localizable.strings
@@ -15,3 +15,7 @@ TabBar.bookmark = "Bookmark";
 Home.firstTitle = "Now Showing";
 Home.seeMoreButtonTitle = "See More";
 
+TopRated = "Top Rated";
+Popular = "Popular";
+UpComing = "Up Coming";
+
